- Modification de l'index (liens, ombrages) - Ajout de la pseudo class active dans l'index

--- a/html-catalog/scss/qc-catalog-sdg.css
+++ b/html-catalog/scss/qc-catalog-sdg.css
@@ -87,6 +87,9 @@ a.pseudo-hover {
   color: var(--qc-hover-link);
   text-decoration: none;
 }
+a.pseudo-active {
+  color: var(--qc-active-link);
+}
 a.visited {
   color: var(--qc-visited-link);
 }
