--- a/html-catalog/scss/qc-catalog-sdg.scss
+++ b/html-catalog/scss/qc-catalog-sdg.scss
@@ -52,7 +52,7 @@
   position: relative;
   text-align: center;
   margin-top: qc.rem(6 * $base-spacer);
-
+  margin-bottom: 5%;
   .qc-row {
     margin-top: qc.spacer(md);
     > div > div {
