- ajout du blanc - modification des css des base

--- a/css/qc-design-tokens.css
+++ b/css/qc-design-tokens.css
@@ -2,6 +2,7 @@
   --qc-content-font-family: Open Sans, sans-serif;
   --qc-header-font-family: Roboto, sans-serif;
   --qc-code-font-family: Roboto Mono, sans-serif;
+  --qc-white: white;
   --qc-pale-blue: #dae6f0;
   --qc-light-blue: #4a98d9;
   --qc-blue: #1479cc;
