- Réglage de rollup. WIP - sass ne compile pas.

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,9 +1,9 @@
-@use "function/colors" as colors;
-@use "function/utils" as *;
+@use "base/function/colors" as colors;
+@use "base/function/utils" as *;
 @use "variables" as *;
-@use "mixins/grid" as *;
-@use "mixins/link" as *;
-@use "mixins/typography" as *;
+@use "base/mixins/grid" as *;
+@use "base/mixins/link" as *;
+@use "base/mixins/typography" as *;
 
 :root{
   font-size: #{$percent-root-font-size}#{"%"};
