--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -1,4 +1,4 @@
-@import "mixins/grid";
-@import "mixins/link";
-@import "mixins/typography";
-@import "mixins/utils";
+@import "base/mixins/grid";
+@import "base/mixins/link";
+@import "base/mixins/typography";
+@import "base/mixins/utils";
