--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,5 +1,5 @@
-@import "variables/typography";
-@import "variables/colors";
-@import "variables/grid";
-@import "variables/shadings";
-@import "variables/spacing";
+@import "base/variables/typography";
+@import "base/variables/colors";
+@import "base/variables/grid";
+@import "base/variables/shadings";
+@import "base/variables/spacing";
