--- a/src/scss/_blockquote.scss
+++ b/src/scss/_blockquote.scss
@@ -1,6 +1,6 @@
 @use "variables" as *;
-@use "function/colors" as *;
-@use "function/utils" as *;
+@use "base/function/colors" as *;
+@use "base/function/utils" as *;
 @use "sass:math";
 
 blockquote {
